chore(deps, settings): channels added to project and put in settings.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,74 @@
 #    pip-compile requirements.in
 #
 asgiref==3.8.1
-    # via django
-django==5.0.3
+    # via
+    #   channels
+    #   daphne
+    #   django
+attrs==23.2.0
+    # via
+    #   automat
+    #   service-identity
+    #   twisted
+autobahn==23.6.2
+    # via daphne
+automat==22.10.0
+    # via twisted
+cffi==1.16.0
+    # via cryptography
+channels[daphne]==4.0.0
     # via -r requirements.in
+constantly==23.10.4
+    # via twisted
+cryptography==42.0.5
+    # via
+    #   autobahn
+    #   pyopenssl
+    #   service-identity
+daphne==4.1.0
+    # via channels
+django==5.0.3
+    # via
+    #   -r requirements.in
+    #   channels
+hyperlink==21.0.0
+    # via
+    #   autobahn
+    #   twisted
+idna==3.6
+    # via
+    #   hyperlink
+    #   twisted
+incremental==22.10.0
+    # via twisted
+pyasn1==0.6.0
+    # via
+    #   pyasn1-modules
+    #   service-identity
+pyasn1-modules==0.4.0
+    # via service-identity
+pycparser==2.21
+    # via cffi
+pyopenssl==24.1.0
+    # via twisted
+service-identity==24.1.0
+    # via twisted
+six==1.16.0
+    # via automat
 sqlparse==0.4.4
     # via django
+twisted[tls]==24.3.0
+    # via daphne
+twisted-iocpsupport==1.0.4
+    # via twisted
+txaio==23.1.1
+    # via autobahn
+typing-extensions==4.10.0
+    # via twisted
 tzdata==2024.1
     # via django
+zope-interface==6.2
+    # via twisted
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
